src/test/ui/pattern/usefulness/exhaustive_integer_patterns.stderr
error: unreachable pattern
  --> $DIR/exhaustive_integer_patterns.rs:23:9
   |
LL |         200 => {}
   |         ^^^
   |
note: the lint level is defined here
  --> $DIR/exhaustive_integer_patterns.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: `128_u8..=u8::MAX` not covered
  --> $DIR/exhaustive_integer_patterns.rs:28:11
   |
LL |     match x {
   |           ^ pattern `128_u8..=u8::MAX` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `u8`

error[E0004]: non-exhaustive patterns: `11_u8..=19_u8`, `31_u8..=34_u8`, `36_u8..=69_u8` and 1 more not covered
  --> $DIR/exhaustive_integer_patterns.rs:33:11
   |
LL |     match x {
   |           ^ patterns `11_u8..=19_u8`, `31_u8..=34_u8`, `36_u8..=69_u8` and 1 more not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `u8`

error: unreachable pattern
  --> $DIR/exhaustive_integer_patterns.rs:44:9
   |
LL |         -2..=20 => {}
   |         ^^^^^^^

error[E0004]: non-exhaustive patterns: `i8::MIN..=-8_i8`, `-6_i8`, `121_i8..=124_i8` and 1 more not covered
  --> $DIR/exhaustive_integer_patterns.rs:41:11
   |
LL |     match x {
   |           ^ patterns `i8::MIN..=-8_i8`, `-6_i8`, `121_i8..=124_i8` and 1 more not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `i8`

error[E0004]: non-exhaustive patterns: `i8::MIN` not covered
  --> $DIR/exhaustive_integer_patterns.rs:83:11
   |
LL |     match 0i8 {
   |           ^^^ pattern `i8::MIN` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `i8`

error[E0004]: non-exhaustive patterns: `0_i16` not covered
  --> $DIR/exhaustive_integer_patterns.rs:91:11
   |
LL |     match 0i16 {
   |           ^^^^ pattern `0_i16` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `i16`

error[E0004]: non-exhaustive patterns: `128_u8..=u8::MAX` not covered
  --> $DIR/exhaustive_integer_patterns.rs:109:11
   |
LL |     match 0u8 {
   |           ^^^ pattern `128_u8..=u8::MAX` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `u8`

error[E0004]: non-exhaustive patterns: `(0_u8, Some(_))` and `(2_u8..=u8::MAX, Some(_))` not covered
  --> $DIR/exhaustive_integer_patterns.rs:121:11
   |
LL |     match (0u8, Some(())) {
   |           ^^^^^^^^^^^^^^^ patterns `(0_u8, Some(_))` and `(2_u8..=u8::MAX, Some(_))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `(u8, Option<()>)`

error[E0004]: non-exhaustive patterns: `(126_u8..=127_u8, false)` not covered
  --> $DIR/exhaustive_integer_patterns.rs:126:11
   |
LL |     match (0u8, true) {
   |           ^^^^^^^^^^^ pattern `(126_u8..=127_u8, false)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `(u8, bool)`

error: multiple patterns covering the same range
  --> $DIR/exhaustive_integer_patterns.rs:141:9
   |
LL |         0 .. 2 => {}
   |         ------ this range overlaps on `1_u8`
LL |         1 ..= 2 => {}
   |         ^^^^^^^ overlapping patterns
   |
note: the lint level is defined here
  --> $DIR/exhaustive_integer_patterns.rs:4:9
   |
LL | #![deny(overlapping_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: `u128::MAX` not covered
  --> $DIR/exhaustive_integer_patterns.rs:146:11
   |
LL |     match 0u128 {
   |           ^^^^^ pattern `u128::MAX` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `u128`

error[E0004]: non-exhaustive patterns: `5_u128..=u128::MAX` not covered
  --> $DIR/exhaustive_integer_patterns.rs:150:11
   |
LL |     match 0u128 {
   |           ^^^^^ pattern `5_u128..=u128::MAX` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `u128`

error[E0004]: non-exhaustive patterns: `0_u128..=3_u128` not covered
  --> $DIR/exhaustive_integer_patterns.rs:154:11
   |
LL |     match 0u128 {
   |           ^^^^^ pattern `0_u128..=3_u128` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `u128`

error: unreachable pattern
  --> $DIR/exhaustive_integer_patterns.rs:162:9
   |
LL |         &FOO => {}
   |         ^^^^

error: unreachable pattern
  --> $DIR/exhaustive_integer_patterns.rs:163:9
   |
LL |         BAR => {}
   |         ^^^

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0004`.
